# geoproyROC

./: CMakeLists.txt  foot.cpp  foot.h  genroc.cpp  genroc.h  geoproyectiva.cpp  geoproyectiva.h  main.cpp
Jupyter/: Borrador.ipynb
Jupyter/.ipynb_checkpoints/: Borrador-checkpoint.ipynb
Jupyter/Respaldo/: CodigoRespaldo.cpp
